--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/greencoast-studios/djs-extended-data-provider-level#readme",
   "devDependencies": {
-    "@greencoast/discord.js-extended": "^3.0.0",
+    "@greencoast/discord.js-extended": "^3.0.1",
     "@types/jest": "^29.5.3",
     "@types/level": "^6.0.1",
     "@types/node": "^20.4.2",
@@ -50,6 +50,7 @@
     "eslint": "^8.45.0",
     "eslint-config-greencoast": "^0.0.4",
     "jest": "^29.6.1",
+    "memory-level": "^1.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.8",
@@ -57,7 +58,7 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@greencoast/discord.js-extended": "~3",
+    "@greencoast/discord.js-extended": ">=3.0.1",
     "discord.js": "~14"
   },
   "dependencies": {
