Updated linter rules.

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,10 @@
     "greencoast/node",
     "greencoast/typescript"
   ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-dupe-class-members": "off"
+  },
   "overrides": [
     {
       "files": ["__mocks__/**/*", "test/**/*"],
@@ -12,7 +16,6 @@
         "prefer-destructuring": "off",
         "no-global-assign": "off",
         "max-lines": "off",
-        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off"
       }
     }
